# adaptive-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 6de20037eb1f_m2_domain_schema.py  7b8c9d0e1f2a_m33_provider_connections_secrets.py  8c9d0e1f2a3b_m33_global_slot_defaults.py  9d0e1f2a3b4c_m33_project_runtime_overrides.py  a1b2c3d4e5f6_m34_provider_model_catalog.py  a4f4a75c9c1d_m2_job_queue.py  b2c3d4e5f6a7_m36_promote_dense_sparse_defaults.py  b7a3c9d4e5f6_m13_chat_audit_trail.py  c3d4e5f6a7b8_m37_auth_schema_repositories.py  c8d9e0f1a2b3_m18_graph_projection_state.py  d3f6d8a1a9b2_m3_dense_embedding_metadata.py  d4e5f6a7b8c9_m38_chat_session_sidebar_state.py  e2a7b9c4d5f0_m24_job_event_retried.py  e5f6a7b8c9d0_m39_user_last_project_preference.py  f3a8b7c6d5e4_m30_retrieved_chunk_sparse_score.py  f4a5b6c7d8e9_m38_chat_retrieval_settings.py
docs/: README.md  first-run.md  progress.md  roadmap.md  runtime-acceptance.md  v1-quality-gate.md
docs/architecture/: README.md  bm25-qwen-sparse-comparison.md  candidate-limit-ab-evidence.md  chat-audit-trail-m13.md  chat-frontend-m15.md  chat-history-m14.md  chat-observability-dashboard-m20.md  chat-observability-m17.md  chat-streaming-m16.md  graph-backfill-reindex-m19.md  graph-db-decision-matrix-m18.md  graph-live-evidence-report-m19.md  graph-live-ops-m19.md  graph-quality-gate-m18.md  graph-retrieval-route-m18.md  graph-retrieval-smoke-m19.md  graph-store-contract-m18.md  lexical-rrf-m29.md  neo4j-adapter-health-m18.md  neo4j-graph-db-m18.md  neo4j-indexer-m18.md  neo4j-live-harness-m19.md  post-v1-retrieval-expansion-m27.md  qwen-local-models.md  qwen-sparse-dense-sparse-m30.md  retrieval-decision-gates.md  retrieval-evidence-expansion.md  retrieval-strategy-decision.md  retrieval-strategy-refresh-m12.md  v1-design.md  v1-release-package.md  v1-release-readiness-m21.md
docs/progress-log/: 2026-06-17-m1-complete-m2-start.md  2026-06-18-m2-quality-gate.md  2026-06-18-m2-schema-archived.md  2026-06-18-m2-schema.md  (+1 more)
frontend/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
openspec/: README.md  config.yaml
prompts/: README.md
tools/: kanban.py
(+611 files in other folders)
