[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Personal, project-scoped adaptive RAG system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "fastapi>=0.115",
  "httpx>=0.28",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "rich>=13.9",
  "sqlalchemy>=2.0",
  "typer>=0.15",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[project.scripts]
adaptive-rag = "adaptive_rag.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["adaptive_rag"]
